# keiba-v3

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  FILELIST.md  QUICKSTART.md  README.md  SKILL.md  TASKS.md  WINDOWS_GUIDE.md  build_db.bat  build_horse_db.py  install_scheduler.bat  main.py  open-in-cursor.bat  pyproject.toml  requirements.txt  retrain_all.py  run_analysis.py  run_analysis_date.py  run_batch_past.py  run_batch_regenerate.py  run_daily_auto.py  run_export_daily.py  run_race.bat  run_results.py  scheduler.py  setup.bat  setup.sh  start_dashboard.bat  start_dashboard_watchdog.bat  start_tunnel.bat  test_debug.py  test_integration.py  verify_course_api.py
config/: settings.py
data/: jockey_position_stats.csv  trainer_position_stats.csv
docs/: CLAUDE_CODE_IN_CURSOR.md  SESSION_LOG_20260424.md  SYSTEM_ARCHITECTURE_FULL.md  a3_step2_4_plan.md  a3e_design.md  analysis_output_audit_report.md  b3_strategy5b_integration_supplement.md  bloodline_pace_implementation.md  claude_code_handoff_template.md  component_implementation.md  dashboard_audit_report.md  ev_analysis_report.md  future_changes_post_a3.md  improvement_ideas_next.md  improvement_opportunities.md  incident_20260422_minimal_change_violation.md  keibabook_nouryoku_verification.md  lm_studio_setup.md  m2_design_v1.md  p0_wf_composite_design.md  p3_new_data_feasibility.md  phase1_feature_diagnosis.md  prediction_pipeline_audit.md  preload_impact.md  ui-renewal-plan.md  コースマスタ修正提案.md  コース形状調査レポート.md  予想精度根本改善Plan.md
frontend/: README.md  _build.bat  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: analyze_gap.py  (+382 more)
(+4697 files in other folders)
